[package]
name = "websocket"
version = "0.1.0"
authors = ["Nate Houk <nate.houk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "2.0"
derivative = "2.2.0"
clearscreen = "1.0.9"
chrono = "0.4.19"